# chinese_chess

./: .gitattributes  .gitignore  PROJECT_NOTES.md  README.md  game.js  index.html  package-lock.json  package.json  styles.css
assets/voice/: README.md
engines/: README.md
scripts/: build-mac-local.sh  sync-tauri-web.sh
src/: main.js  preload.js  ucci-engine.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
