[package]
name = "chinese-chess"
version = "0.2.0"
description = "Chinese chess game with Pikafish engine support"
authors = ["Local"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
